# context-firewall

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: boundary-rules.md  classification.md  domains.md  multi-tenant-isolation.md
examples/: agent_integration.py  basic_isolation.py  custom_domains.py
python/: pyproject.toml
python/src/context_firewall/: __init__.py  boundary.py  classifier.py  domain.py  firewall.py  inspector.py  multilang.py  tenant_isolation.py  types.py
python/src/context_firewall/profiles/: __init__.py  gdpr.py  hipaa.py  sox.py
python/tests/: conftest.py  test_context_firewall.py
scripts/: fire-line-audit.sh
typescript/: package.json  tsconfig.json
typescript/src/: boundary.ts  classifier.ts  domain.ts  firewall.ts  index.ts  inspector.ts  tenant-isolation.ts  types.ts
