[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-firewall"
version = "0.1.0"
description = "Domain isolation for AI agents — prevent data leaking between work, personal, health, and financial contexts."
readme = "../../README.md"
license = { text = "BSL-1.1" }
authors = [
  { name = "MuVeraAI Corporation", email = "oss@muveraai.com" }
]
keywords = ["ai-safety", "context-isolation", "domain-firewall", "agent-security", "data-classification", "privacy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/muveraai/aumos-oss/tree/main/context-firewall"
Repository = "https://github.com/muveraai/aumos-oss"
Issues = "https://github.com/muveraai/aumos-oss/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/context_firewall"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = []
